# daily-python

./: README.md
c_primary/: a.out  hello_world.c
c_primary/func4/: a.out  strrindex.c
c_primary/intro1/: fc.c  helloworld  helloworld.c
depot/config/initializers/: secret_token.rb
learn_fastapi/hello/: README.org  pyproject.toml
learn_fastapi/hello/hello/: main.py
mongodb/: pymongo_page.py
nodechat/: package.json  server.js
nodechat/lib/: chat_server.js
nodechat/public/: index.html
nodechat/public/javascripts/: chat.js  chat_ui.js
nodechat/public/stylesheets/: style.css
redis_read/sds/: sds.c  sds.h
ruby_blog/: Rakefile
ruby_blog/app/controllers/: posts_controller.rb
ruby_blog/app/models/: post.rb
ruby_blog/app/views/layouts/: application.html.erb
ruby_blog/app/views/posts/: _form.html.erb  index.html.erb
ruby_blog/config/: application.rb  environment.rb  routes.rb
ruby_blog/config/environments/: development.rb  production.rb  test.rb
ruby_blog/config/initializers/: secret_token.rb  session_store.rb
ruby_blog/db/: schema.rb
small_python/: object.h
